Primer commit, creación del proyecto

--- a/src/app/components/title-bar/title-bar.component.html
+++ b/src/app/components/title-bar/title-bar.component.html
@@ -6,8 +6,8 @@
           (click)="handleAgregar.emit()">
     <mat-icon>add</mat-icon>
   </button>
-  <button mat-icon-button
-          matTooltip="Pulse este botón para realizar una búsqueda.">
-    <mat-icon>search</mat-icon>
-  </button>
+<!--  <button mat-icon-button-->
+<!--          matTooltip="Pulse este botón para realizar una búsqueda.">-->
+<!--    <mat-icon>search</mat-icon>-->
+<!--  </button>-->
 </mat-toolbar>
