--- a/src/app/pages/cliente/cliente.component.html
+++ b/src/app/pages/cliente/cliente.component.html
@@ -1,10 +1,10 @@
 
-<app-title-bar [title]="'Clientes'" (handleAgregar)="nuevoRegistro()"></app-title-bar>
+<app-title-bar [title]="'Clientes'" (handleAgregar)="abrirDialog()"></app-title-bar>
 <ng-container>
-  <table mat-table [dataSource]="lstData" class="mat-elevation-z8">
+  <table mat-table [dataSource]="dsCliente" class="mat-elevation-z8">
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef style="width: 15%"> No. </th>
-      <td mat-cell *matCellDef="let element" style="width: 15%"> {{element.id}} </td>
+      <td mat-cell *matCellDef="let element; let i = index" style="width: 15%"> {{(i+1)}} </td>
     </ng-container>
 
     <ng-container matColumnDef="nombres">
@@ -47,9 +47,9 @@
       <mat-icon>edit</mat-icon>
       <span>Modificar Registro</span>
     </button>
-    <button mat-menu-item (click)="clickEliminar(object)">
-      <mat-icon>remove_circle_outline</mat-icon>
-      <span>Eliminar Registro</span>
-    </button>
+<!--    <button mat-menu-item (click)="clickEliminar(object)">-->
+<!--      <mat-icon>remove_circle_outline</mat-icon>-->
+<!--      <span>Eliminar Registro</span>-->
+<!--    </button>-->
   </ng-template>
 </mat-menu>
