--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<div class="div-img">
+  <p>Para iniciar seleccione una de las opciones de la izquierda.</p>
+  <img src="./assets/background.jpg" width="100%" height="100%" />
+</div>
