--- a/src/app/pages/mantenimiento/marcas/marca-dialog/marca-dialog.component.html
+++ b/src/app/pages/mantenimiento/marcas/marca-dialog/marca-dialog.component.html
@@ -11,7 +11,7 @@
 
   </div>
   <div mat-dialog-actions>
-    <button mat-raised-button (click)="clickGuardar()">Guardar</button>
+    <button mat-raised-button (click)="clickGuardar()" [disabled]="!formMarca.valid">Guardar</button>
     <button mat-raised-button (click)="closeDialog()">Cancelar</button>
   </div>
 </div>
