--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -15,7 +15,7 @@
 
 <mat-menu #menu="matMenu">
   <ng-template matMenuContent>
-    <button mat-menu-item>
+    <button mat-menu-item (click)="cerrarSesion()">
       <mat-icon>exit_to_app</mat-icon>
       <span>Cerrar sesión</span>
     </button>
@@ -27,7 +27,6 @@
                style="width: 220px;">
     <mat-nav-list>
       <a mat-list-item *ngFor="let item of navItems" routerLink="{{item.link}}">
-        <!-- (click)="sideNav.close()"> -->
         <mat-icon>{{item.icon}}</mat-icon> <span class="nav-caption">{{item.text}}</span>
       </a>
     </mat-nav-list>
