--- a/src/app/pages/cliente/cliente-dialog/cliente-dialog.component.html
+++ b/src/app/pages/cliente/cliente-dialog/cliente-dialog.component.html
@@ -9,16 +9,16 @@
       <app-custom-input [label]="'Apellidos:*'" [formControlName]="'apellidos'"></app-custom-input>
       <app-custom-input [label]="'Teléfono:*'" [formControlName]="'telefono'" [type]="'number'"></app-custom-input>
       <app-custom-input [label]="'Correo:*'" [formControlName]="'correo'" [type]="'email'"></app-custom-input>
-      <app-custom-input [label]="'Nacimiento:*'" [formControlName]="'nacimiento'" [type]="'date'"></app-custom-input>
+      <app-custom-input [label]="'Nacimiento:*'" [formControlName]="'nacimiento'" [type]="'date'" ></app-custom-input>
       <app-custom-input [label]="'Dirección:*'" [formControlName]="'direccion'" [rows]="'3'"></app-custom-input>
       <app-custom-select [label]="'Género:*'" [formControlName]="'genero'" [lista]="lstGenero"></app-custom-select>
       <app-custom-input [label]="'Ocupación:*'" [formControlName]="'ocupacion'"></app-custom-input>
-      <app-custom-input [label]="'Ingresos:*'" [formControlName]="'ingresos'"></app-custom-input>
+      <app-custom-input [label]="'Ingresos:*'" [formControlName]="'ingresos'" [type]="'number'"></app-custom-input>
     </form>
 
   </div>
   <div mat-dialog-actions>
-    <button mat-raised-button (click)="clickGuardar()">Guardar</button>
+    <button mat-raised-button (click)="clickGuardar()" [disabled]="!formCliente.valid">Guardar</button>
     <button mat-raised-button (click)="closeDialog()">Cancelar</button>
   </div>
 </div>
