--- a/src/app/pages/cotizacion/cotizacion-dialog/cl-tabla/cl-tabla.component.html
+++ b/src/app/pages/cotizacion/cotizacion-dialog/cl-tabla/cl-tabla.component.html
@@ -1,6 +1,6 @@
 
 <div class="card">
-  <table mat-table [dataSource]="dsCliente" class="mat-elevation-z8" multiTemplateDataRows>
+  <table mat-table [dataSource]="dsCliente" multiTemplateDataRows>
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef style="width: 15%"> No. </th>
       <td mat-cell *matCellDef="let cliente; let i = dataIndex;" style="width: 15%"> {{(i+1)}} </td>
