--- a/src/app/pages/cotizacion/cotizacion.component.html
+++ b/src/app/pages/cotizacion/cotizacion.component.html
@@ -1,7 +1,7 @@
 
-<app-title-bar [title]="'Vehículos'" (handleAgregar)="nuevoRegistro()"></app-title-bar>
+<app-title-bar [title]="'Cotizaciones '" (handleAgregar)="nuevoRegistro()"></app-title-bar>
 <ng-container>
-  <table mat-table [dataSource]="lstCliente" class="mat-elevation-z8" multiTemplateDataRows>
+  <table mat-table [dataSource]="lstCliente" multiTemplateDataRows>
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef style="width: 15%"> No. </th>
       <td mat-cell *matCellDef="let cliente; let i = dataIndex;" style="width: 15%"> {{(i+1)}} </td>
@@ -38,7 +38,7 @@
           <app-tabla-cotizacion style="width: 100%"
                                 [listaCotizacion]="cliente.cotizaciones"
                                 (info)="infoCotizacion($event, cliente)"
-                                (print)="printCotizacion($event)">
+                                (print)="printCotizacion($event, cliente)">
           </app-tabla-cotizacion>
         </div>
       </td>
@@ -51,7 +51,11 @@
         (click)="expandRow(row)">
     </tr>
     <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"></tr>
+
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="5">No ha creado cotizaciones aún...</td>
+    </tr>
   </table>
 </ng-container>
-
+<app-loading [isLoading]="isLoading"></app-loading>
 
