--- a/src/app/pages/mantenimiento/linea/linea.component.html
+++ b/src/app/pages/mantenimiento/linea/linea.component.html
@@ -2,17 +2,17 @@
 
   <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef style="width: 15%"> No. </th>
-    <td mat-cell *matCellDef="let element" style="width: 15%"> {{element.id}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="marca">
-    <th mat-header-cell *matHeaderCellDef style="width: 70%"> Marca </th>
-    <td mat-cell *matCellDef="let element" style="width: 70%"> {{element.marca}} </td>
+    <td mat-cell *matCellDef="let element; let i = index;" style="width: 15%"> {{(i+1)}} </td>
   </ng-container>
 
   <ng-container matColumnDef="linea">
     <th mat-header-cell *matHeaderCellDef style="width: 70%"> Línea </th>
     <td mat-cell *matCellDef="let element" style="width: 70%"> {{element.linea}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="marca">
+    <th mat-header-cell *matHeaderCellDef style="width: 70%"> Marca </th>
+    <td mat-cell *matCellDef="let element" style="width: 70%"> {{element.marca}} </td>
   </ng-container>
 
   <ng-container matColumnDef="options">
@@ -34,9 +34,9 @@
       <mat-icon>edit</mat-icon>
       <span>Modificar Registro</span>
     </button>
-    <button mat-menu-item (click)="eliminar.emit(object)">
-      <mat-icon>remove_circle_outline</mat-icon>
-      <span>Eliminar Registro</span>
-    </button>
+<!--    <button mat-menu-item (click)="eliminar.emit(object)">-->
+<!--      <mat-icon>remove_circle_outline</mat-icon>-->
+<!--      <span>Eliminar Registro</span>-->
+<!--    </button>-->
   </ng-template>
 </mat-menu>
