--- a/src/app/pages/mantenimiento/marcas/marcas.component.html
+++ b/src/app/pages/mantenimiento/marcas/marcas.component.html
@@ -2,7 +2,7 @@
 
   <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef style="width: 15%"> No. </th>
-    <td mat-cell *matCellDef="let element" style="width: 15%"> {{element.id}} </td>
+    <td mat-cell *matCellDef="let element; let i = index;" style="width: 15%"> {{(i+1)}} </td>
   </ng-container>
 
   <ng-container matColumnDef="marca">
@@ -29,9 +29,9 @@
       <mat-icon>edit</mat-icon>
       <span>Modificar Registro</span>
     </button>
-    <button mat-menu-item (click)="eliminar.emit(object)">
-      <mat-icon>remove_circle_outline</mat-icon>
-      <span>Eliminar Registro</span>
-    </button>
+<!--    <button mat-menu-item (click)="eliminar.emit(object)">-->
+<!--      <mat-icon>remove_circle_outline</mat-icon>-->
+<!--      <span>Eliminar Registro</span>-->
+<!--    </button>-->
   </ng-template>
 </mat-menu>
