--- a/src/app/pages/vehiculo/vehiculo.component.html
+++ b/src/app/pages/vehiculo/vehiculo.component.html
@@ -1,10 +1,10 @@
 
-<app-title-bar [title]="'Vehículos'" (handleAgregar)="nuevoRegistro()"></app-title-bar>
+<app-title-bar [title]="'Vehículos'" (handleAgregar)="abrirDialog()"></app-title-bar>
 <ng-container>
   <table mat-table [dataSource]="lstData" class="mat-elevation-z8">
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef style="width: 15%"> No. </th>
-      <td mat-cell *matCellDef="let element" style="width: 15%"> {{element.id}} </td>
+      <td mat-cell *matCellDef="let element; let i = index;" style="width: 15%"> {{(i+1)}} </td>
     </ng-container>
 
     <ng-container matColumnDef="tipo">
@@ -33,7 +33,7 @@
     </ng-container>
 
     <ng-container matColumnDef="cc">
-      <th mat-header-cell *matHeaderCellDef style=""> CC </th>
+      <th mat-header-cell *matHeaderCellDef style="" [matTooltip]="'Cilindraje del vehículo'"> CC </th>
       <td mat-cell *matCellDef="let element" style=""> {{element.cc}} </td>
     </ng-container>
 
@@ -58,13 +58,13 @@
 
 <mat-menu #menu="matMenu">
   <ng-template matMenuContent let-object="object">
-    <button mat-menu-item (click)="clickEditar(object)">
+    <button mat-menu-item (click)="abrirDialog(object)">
       <mat-icon>edit</mat-icon>
       <span>Modificar Registro</span>
     </button>
-    <button mat-menu-item (click)="clickEliminar(object)">
-      <mat-icon>remove_circle_outline</mat-icon>
-      <span>Eliminar Registro</span>
-    </button>
+<!--    <button mat-menu-item (click)="clickEliminar(object)">-->
+<!--      <mat-icon>remove_circle_outline</mat-icon>-->
+<!--      <span>Eliminar Registro</span>-->
+<!--    </button>-->
   </ng-template>
 </mat-menu>
